--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@linaria/babel-preset": "3.0.0-beta.21",
-    "@linaria/core": "3.0.0-beta.21",
-    "@linaria/react": "3.0.0-beta.21",
-    "@linaria/shaker": "3.0.0-beta.21",
     "@mantine/core": "^4.2.9",
     "@mantine/dates": "^4.2.9",
     "@mantine/dropzone": "^4.2.9",
@@ -23,7 +19,8 @@
     "dayjs": "^1.11.3",
     "linaria": "^2.3.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.43",
@@ -31,7 +28,6 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9",
-    "vite-plugin-linaria": "^1.0.0"
+    "vite": "^2.9.9"
   }
 }
