--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "linaria": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "tabler-icons-react": "^1.49.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.43",
