--- a/web/package.json
+++ b/web/package.json
@@ -8,27 +8,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.9",
-    "@mantine/dates": "^4.2.9",
-    "@mantine/dropzone": "^4.2.9",
-    "@mantine/form": "^4.2.9",
-    "@mantine/hooks": "^4.2.9",
-    "@mantine/notifications": "^4.2.9",
-    "@mantine/prism": "^4.2.9",
-    "@mantine/rte": "^4.2.9",
+    "@mantine/core": "^4.2.10",
+    "@mantine/dates": "^4.2.10",
+    "@mantine/dropzone": "^4.2.10",
+    "@mantine/form": "^4.2.10",
+    "@mantine/hooks": "^4.2.10",
+    "@mantine/notifications": "^4.2.10",
+    "@mantine/prism": "^4.2.10",
+    "@mantine/rte": "^4.2.10",
     "dayjs": "^1.11.3",
     "linaria": "^2.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "swr": "^1.3.0",
     "tabler-icons-react": "^1.49.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.43",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@vitejs/plugin-react": "^1.3.2",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.12"
   }
 }
